fixed some layout issues
fixed header font inconsistency
need to fix horizontal scrolling issue and body tag looks weird

--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -1,33 +1,36 @@
 .portfolio-header {
-  position: absolute;
-  left: 120px;
-  top: 40px;
-  // font-size: 53px;
-  font-family: 'Coolvetica';
-  color: #ffd700;
-  // font-weight: 400;
-  margin-bottom: 40px;
+  h1 {
+    left: 120px;
+    top: 40px;
+    font-size: 53px;
+    font-family: 'Coolvetica';
+    color: #ffd700;
+    font-weight: 400;
+    position: relative;
+    // margin-bottom: 40px;
 
-  &::before {
-    content: '<h1>';
-    font-family: 'La Belle Aurore';
-    font-size: 18px;
-    position: absolute;
-    margin-top: -10px;
-    left: -10px;
-    opacity: 0.6;
-    line-height: 18px;
-  }
-  &::after {
-    content: '<h1/>';
-    font-family: 'La Belle Aurore';
-    font-size: 18px;
-    line-height: 18px;
-    position: absolute;
-    margin-left: 20px;
-    left: -30px;
-    bottom: -20px;
-    opacity: 0.6;
+    &::before {
+      content: '<h1>';
+      font-family: 'La Belle Aurore';
+      font-size: 18px;
+      position: absolute;
+      margin-top: -10px;
+      left: -10px;
+      opacity: 0.6;
+      line-height: 18px;
+    }
+
+    &::after {
+      content: '<h1/>';
+      font-family: 'La Belle Aurore';
+      font-size: 18px;
+      line-height: 18px;
+      position: absolute;
+      margin-left: 20px;
+      left: -30px;
+      bottom: -20px;
+      opacity: 0.6;
+    }
   }
 }
 
@@ -37,9 +40,10 @@
   position: relative;
   left: 10px;
   width: 90%;
-  margin: 40px 0 40px 70px;
+  margin-left: 110px;
+  // margin-right: 50px;
   border: 1px dashed blue;
-  // padding: 400px;
+  margin-top: 100px;
 
   &::before {
     content: '<ul>';
@@ -70,7 +74,7 @@
 }
 
 .column {
-  width: 50%; /* Each column takes up half of the container width */
-  box-sizing: border-box; /* Include padding and border in the width */
+  width: 45%; /* Each column takes up half of the container width */
+  // box-sizing: border-box; /* Include padding and border in the width */
   // padding: 8px; /* Adjust padding as needed */
 }
